clusters/talos-ottawa/apps/media/app/unmanic/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unmanic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unmanic
  template:
    metadata:
      labels:
        app: unmanic
    spec:
      hostname: unmanic-robbinsdale
      containers:

        - name: unmanic
          resources:
            requests:
              memory: "8Gi"
              cpu: "4"
            limits:
              memory: "16Gi"
              cpu: "8"
          image: josh5/unmanic:latest
          ports:
            - name: http
              containerPort: 8888
              protocol: TCP
          volumeMounts:
            - name: tv-volume
              mountPath: /library/tvshows
            - name: movies-volume
              mountPath: /library/movies
            - name: config-volume
              mountPath: /config
            - name: cache-volume
              mountPath: /tmp/unmanic
      volumes:
        - name: tv-volume
          persistentVolumeClaim:
            claimName: sonarr-tv
        - name: movies-volume
          persistentVolumeClaim:
            claimName: radarr-movies
        - name: config-volume
          persistentVolumeClaim:
            claimName: unmanic-config
        - name: cache-volume
          emptyDir: {}
